ADD: Basic shared section listings

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -91,4 +91,5 @@
 	<string id="30089">Kids</string>
 	<string id="30090">Teens</string>
 	<string id="30091">Adults</string>
+	<string id="30092">Use menu for shared sections</string>
 </strings>
